--- a/config/options.ini
+++ b/config/options.ini
@@ -16,13 +16,13 @@
 [Credentials]
 ; Put token for your bot account here. Not "secret". The secret is not the token.
 ; If you don't have bot account, create it here: https://discordapp.com/developers/applications/me/
-Token = MjU0NDk0ODQxMjAxNzU0MTEy.CyP6BQ.TCMrsYgtaxflHBxAqDF3A-YBvbw
+Token = Mjk4NDE0NjE4NzM1MjgwMTI4.C8O_9g.FKxXfcf7XxNTntgWhNgZG0sJTu4
 ; If you want to use a normal user account instead of a bot account, use these lines instead.
 ; Comment the token line and uncomment the Email/Password lines.
 ;Email = bot_discord@email
 ;Password = bot_discord_password
 ; This name used for Default in !setname command
-Name = MusicBot
+Name = ud-bot
 
 [Permissions]
 ; This number should be your id.  It gives you full permissions.  You do not put the bot's id here.  That's silly.
